force-app/main/default/objects/PeriodoTrabalhoAtendente__c/PeriodoTrabalhoAtendente__c.object-meta.xml
<CustomObject>
    <label>Período de Trabalho do Atendente</label>
    <nameField>
        <displayFormat>PTA-{0000}</displayFormat>
        <label>Nome de Período de Trabalho do Vendedor</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Períodos de Trabalho dos Atendentes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>