force-app/main/default/objects/PeriodoTrabalhoAtendente__c/fields/Atendente__c.field-meta.xml
<CustomField>
    <fullName>Atendente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Atendente</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Períodos de Trabalho dos Atendentes</relationshipLabel>
    <relationshipName>PeriodosTrabalhoAtendentes</relationshipName>
    <type>Lookup</type>
</CustomField>