force-app/main/default/objects/PeriodoTrabalhoAtendente__c/fields/AtendimentoMarcado__c.field-meta.xml
<CustomField>
    <fullName>AtendimentoMarcado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Atendimento marcado?</label>
    <type>Checkbox</type>
</CustomField>