force-app/main/default/objects/PeriodoTrabalhoAtendente__c/fields/PeriodoTrabalho__c.field-meta.xml
<CustomField>
    <fullName>PeriodoTrabalho__c</fullName>
    <label>Período de Trabalho</label>
    <referenceTo>PeriodoTrabalho__c</referenceTo>
    <relationshipLabel>Períodos de Trabalho dos Atendentes</relationshipLabel>
    <relationshipName>PeriodosTrabalhoAtendentes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>